Fix clipping

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@
 
 .screenshot {
     max-width: 100%;
-    overflow: clip;
+    overflow: hidden;
 }
 
 .screenshot-img {
